new content for cemal

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1923,21 +1923,32 @@
  PAP_vatican_neutrality:0 "Vatican City State"
  PAP_vatican_neutrality_DEF:0 "the Vatican City State"
 
+ TUR_CUP:0 "Ottoman Empire"
+ TUR_CUP_DEF:0 "the Ottoman Empire"
+ TUR_CUP_communism:0 "Ottoman Socialist Federation"
+ TUR_CUP_communism_DEF:0 "the Ottoman Socialist Federation"
+ TUR_CUP_ADJ:0 "Ottoman"
+
  TUR_ottoman_syria:0 "Ottoman Syria"
- TUR_ottoman_syria_DEF:0 "Ottoman Provinces in Syria Under the Command of Ahmed Cemâl Paşa"
+ TUR_ottoman_syria_DEF:0 "the Ottoman Provinces in Syria Under the Command of Ahmed Cemâl Paşa"
  TUR_ottoman_syria_ADJ:0 "Ottoman"
- TUR_ottoman_aydin:0 "Ottoman Aydin"
- TUR_ottoman_aydin_DEF:0 "Ottoman Vilayet of Aydin"
- TUR_ottoman_aydin_ADJ:0 "Ottoman"
- TUR_ottoman_trabzon:0 "Ottoman Trebizond"
- TUR_ottoman_trabzon_DEF:0 "Ottoman Vilayet of Trebizond"
- TUR_ottoman_trabzon_ADJ:0 "Ottoman"
- TUR_ottoman_diyarbakir:0 "Ottoman Diyarbekir"
- TUR_ottoman_diyarbakir_DEF:0 "Ottoman Vilayet of Diyarbekir"
- TUR_ottoman_diyarbakir_ADJ:0 "Ottoman"
  TUR_ottoman_cemal:0 "Ottoman Reclamation Government"
- TUR_ottoman_cemal_DEF:0 "Ottoman Reclamation Government Under the Command of Ahmed Cemâl Paşa"
+ TUR_ottoman_cemal_DEF:0 "the Ottoman Reclamation Government Under the Command of Ahmed Cemâl Paşa"
  TUR_ottoman_cemal_ADJ:0 "Ottoman"
+
+ TUR_turkish_empire:0 "Turkish Empire"
+ TUR_turkish_empire_DEF:0 "the Turkish Empire"
+ TUR_turkish_empire_democratic:0 "Republic of Turkey"
+ TUR_turkish_empire_democratic_DEF:0 "the Republic of Turkey"
+ TUR_turkish_empire_communism:0 "Socialist Republic of Turkey"
+ TUR_turkish_empire_communism_DEF:0 "the Socialist Republic of Turkey"
+ TUR_turkish_empire_ADJ:0 "Turkish"
+
+ TUR_djemali_empire:0 "Djemali Empire"
+ TUR_djemali_empire_DEF:0 "the Djemali Empire"
+ TUR_djemali_empire_communism:0 "Djemali Socialist Federation"
+ TUR_djemali_empire_communism_DEF:0 "the Djemali Socialist Federation"
+ TUR_djemali_empire_ADJ:0 "Djemali"
  
  SER_AUH_neutrality:0 "Serbia"
  SER_AUH_fascism:0 "Serbia"
