--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -907,7 +907,7 @@
  TUR_turkish_communist_party_long:0 "Türk Komünist Fırkası"
  TUR_sultanate_party:0 "Devlet-i Ebed-müddet"
  TUR_sultanate_precursor_party:0 "Geçici Hükûmet"
- TUR_ottoman_dynasty_party:0 "Osmanlı Hanedanı"
+ TUR_ottoman_dynasty_party:0 "Hanedan-ı Âl-i Osman"
  TUR_cancelation_of_annexation_party:0 "Redd-i İlhak"
  TUR_cancelation_of_annexation_party_long:0 "Redd-i İlhak Cemiyeti"
  TUR_renewal_party:0 "TF"
@@ -920,6 +920,7 @@
  TUR_al_qahtaniya_party_long:0 "Hizb al-lamarkaziyya al-idariyya al'Uthmani"
  TUR_anti_arab_party:0 "MBF"
  TUR_anti_arab_party_long:0 "Milli Birlik Fırkası"
+ TUR_djemali_dynasty_party:0 "Hanedan-ı Âl-i Cemâl"
 
  HUN_democratic_party:0 "F48P"
  HUN_democratic_party_long:0 "Függetlenségi és 48-as Párt"
