--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -5055,7 +5055,6 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.53.t:0 "Failure in Negotiations with [TRS.GetLeader]"
  ottoman_syria.53.d:0 "Our negotiations with [TRS.GetLeader] has convoluted in failure. Though we've tried to pull [TRS.GetLeader] on our side by promising to ensure the future of the empire, our demands were simply not met by the other side. It seems like we're left no other option but to push with the resources we have on our hand against both [TUR.GetNameDef] and [TRS.GetLeader]."
  ottoman_syria.53.a:0 "War in Levant thus resumes."
- 
  TRS_cemal_entente_negotiations_ratification_of_treaties_cemal_tt:0 "§Y[?global.TRS_country_cemal_negotiating.GetFactionName]§! will be less likely to push towards our territory while more prone to accepting positive diplomatic efforts."
  TRS_cemal_entente_negotiations_ratification_of_treaties_entente_tt:0 "§Y[TRS.GetName]§! will be less likely to push towards our territory while more prone to accepting positive diplomatic efforts."
  ottoman_syria.54.t:0 "Negotiations with the Sharifian Revolt"
@@ -5093,6 +5092,35 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.63.t:0 "Armistice breaks between the Ottoman Empire and the Sharifian Revolt"
  ottoman_syria.63.d:0 "Though Ahmed Cemâl Paşa came to negotiate with us, all he offered was to back to the status quo or worse. As we had no other option but to refuse, neither did they offered to give us what we want. We have no other option but to continue the fight."
  ottoman_syria.63.a:0 "Back to the fight."
+ ottoman_syria.64.t:0 "Cemâl's Revolt"
+ ottoman_syria.64.d:0 "As [TUR.GetNameDef] has been struggling to keep up with the war, one of the ruling trio of the empire Ahmed Cemâl Paşa has decided to take a drastic measure to save the empire. In the midst of the war, Cemâl and the territories and staff under his command has switched sides in the conflict to strike against the mother empire. Stating that his intentions are to only save the empire from its approaching demise, Cemâl has been in contact and negotiating with [?global.TRS_country_cemal_negotiating.GetFactionName] powers. As his planned revolt is finally in motion, it surely will open up a new front in Syria and Anatolia."
+ ottoman_syria.64.a:0 "That's the only way to save the empire."
+ ottoman_syria.64.b:0 "Even our own is revolting against us."
+ ottoman_syria.64.c:0 "A valuable, yet temporary, partner."
+ ottoman_syria.64.e:0 "The Turks can't even manage to stay at peace with each other."
+ ottoman_syria.65.t:0 "[TUR.GetAdjective] Civil War"
+ ottoman_syria.65.d:0 "Though [TUR.GetNameDef] has found itself among the victors of the Great War, it helped little to no to stabilize it's internal matters. As the empire still struggles to maintain control over its territories, the head of the [TUR.GetAdjective] provinces in Syria Ahmed Cemâl Paşa has decided to march on the empire's capital. As this event has been the boiling point of an ongoing power struggle the empire has been facing, it finally formulated itself into an all out revolt (or a civil war one might say). As Cemâl pushes towards the [TUR.GetAdjective] capital, many still doubts if the empire truly ended the war as one of the victorious powers."
+ ottoman_syria.65.a:0 "It's time to purify the empire from the old and the corrupt."
+ ottoman_syria.65.b:0 "Those dare to revolt against the empire shall be punished."
+ ottoman_syria.65.c:0 "Only ones they haven't killed were themselves."
+ ottoman_syria.66.t:0 "Cemal Azmi's Offer"
+ ottoman_syria.66.d:0 "Cemal Azmi Bey, a prominent member of the Committee of Union and Progress and the governor of Vilayet of Trabzon, has offered his help in our revolt. As being a member of our faction within the Committee, he's more than eager to assit our side in the conflict in exchange of securing his place in the new system."
+ ottoman_syria.66.a:0 "We can always welcome the help of an old friend."
+ ottoman_syria.66.b:0 "Corrupts of the old has no place in the new system."
+ ottoman_syria.67.t:0 "Cemal Azmi Switches Sides"
+ ottoman_syria.67.d:0 "Cemal Azmi Bey, a prominent member of the Committee of Union and Progress and the governor of Vilayet of Trabzon, has switched to Ahmed Cemâl Paşa's side in the current conflict. As he was already a part of the Cemâl's faction within the Committee, we're not cought by surprise at all. Yet his actions will surely force our hand."
+ ottoman_syria.67.a:0 "He was one of Cemâl's Vermins afterall."
+ ottoman_syria.68.t:0 "Cemâl's Supporters Defect to Their Side"
+ ottoman_syria.68.d:0 "Even though Cemâl has carved his own region within our empire, most of his followers were in active roles in important positions. As Cemâl started his march against our empire, his supporters decided to switch to their side, taking several of our men and arsenal with them."
+ ottoman_syria.68.a:0 "At least don't take our men with you."
+ ottoman_syria.69.t:0 "Our Supporters Defect to our Side"
+ ottoman_syria.69.d:0 "As many of our supporters were residing within the empire, taking active roles in important positions, they've decided to switch to our side and help in our war effort. Many important individual from our empire now flocking into [TRS.capital.GetName] to support our struggle."
+ ottoman_syria.69.a:0 "Much needed help in our struggle."
+ ottoman_syria.70.t:0 "Fate of the Empire"
+ ottoman_syria.70.d:0 "As we've reclaimed [347.GetName] and got control of the empire, now the fate of the future of the nation rests in our hands. As we've gotten rid of the old corrupt bureaucracy that plagued with incompetence, we can reinstall the sultan as a public figure and declare ourselves as the new grand vizier. While we have the chance, we might abolish the monarchy entirely and instead declare the new Turkish Empire under a republic while keeping the old sultan as the caliph. An unpopular last option, we can declare ourself as the head of a new dynasty named after ourself."
+ ottoman_syria.70.a:0 "Reinstall the old dynasty."
+ ottoman_syria.70.b:0 "Era of the monarchs are far gone."
+ ottoman_syria.70.c:0 "The Turks need a new dynasty."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
