--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -714,7 +714,7 @@
  TUR_senussi_order:0 "Senussi Order"
  TUR_islamist_revolt:0 "Islamic Revolt"
  TUR_unity_of_the_islamic_world:0 "Unity of the Islamic Realm"
- TUR_sultan_abdulhamid_ii:0 "Abdulhamid II"
+ TUR_abdulhamid_II:0 "Abdulhamid II"
  TUR_constitutional_reform:0 "Constitutional Reforms"
  TUR_diplomatic_isolation:0 "Diplomatic Isolation"
  TUR_diplomatic_isolation_desc:0 "As proven from our recent wars, no great power is willing to allign with us. How long this isolation will last is uncertain, but the fact that we have to find some allies if we want to survive is unquestionable."
@@ -824,7 +824,6 @@
  TUR_homeland_security:0 "Homeland Security"
  TUR_wavering_ottoman_influence:0 "Wavering Ottoman Influence"
  TUR_wavering_ottoman_influence_desc:0 "Even though we're an Ottoman vassal, their influence is wavering. While we can't side against them in international conflicts, this certainly doesn't mean that we'll join their side."
- HJZ_hussein_bin_ali_caliph:0 "Hussein bin Ali"
  TUR_army_segregation:0 "Army Segregation"
  TUR_compulsory_education:0 "Compulsory Education"
  TUR_model_turkish_citizen:0 "Model [TUR.GetAdjective] Citizen"
@@ -1086,7 +1085,9 @@
  TRS_popular_opposition_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
  TRS_reconfiguring_foreign_policy:0 "Reconfiguring Foreign Policy"
  TRS_reconfiguring_foreign_policy_desc:0 "Our recent coup, alongside our internal politics, has left our diplomatic relations in disarray. While dropping out of the war resulted in a base support from our population, it also left us unable to maneuver through the international arena."
- TRS_cemals_syria:0 "Cemâl's Syria"
+ TRS_cemals_syria:0 "[TRS_cemals_syria]"
+ TRS_cemals_syria_syria:0 "Cemâl's Syria"
+ TRS_cemals_syria_empire:0 "Cemâl's Empire"
  TRS_cemals_syria_desc:0 "As Ahmed Cemâl Paşa has been assigned with the task of reforming the Syrian lands, he is given a wide range of autonomoy of action. As his decisions will directly shape Syria, it will have profound effects on the state, society and its components."
  TRS_weapon_workshops:0 "Weapon Workshops"
  TRS_weapon_workshops_desc:0 "The weapon workshops we've opened, though lacking in quality, allows us to somewhat compensate for our lack of military factories in the provinces under our control."
@@ -1102,6 +1103,8 @@
  HJZ_armistice_in_the_revolt:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
  HJZ_armistice_in_the_revolt_desc:0 "Ever since the start of the Sharifian Revolt, the bearers of the Arab Revolt flag has been struggling against their old overlords. As peace talks are underway, perhaps things could settle well."
  HJZ_armistice_in_the_revolt_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
+ TRS_push_for_konstantiniyye:0 "Push for Konstantiniyye"
+ TRS_push_for_konstantiniyye_desc:0 "As we've started our push towards the capital of the empire which corrupt bureaucrats reside, our efficient chain of command and popular support lets us switfly march on [TUR.capital.GetName]."
  TUR_mustafa_rahmi_committee:0 "Mustafa Rahmi Bey"
  TUR_mustafa_rahmi_committee_desc:0 "\n\n\n\n\n\n£GFX_TUR_mustafa_rahmi_texticon \n\n\n\n\n\n\n\nMustafa Rahmi Bey, the governor of Aydın Vilayet, is a prominent member of the Committee of Union and Progress. His connections to the committee has allowed himself to gain a wide range of autonomy in his actions, even though he might disregard the policies of the central state in favor of his own actions."
  TUR_mustafa_rahmi_committee_tt:0 "£decision_icon_small  §YDecisions§! related to §Yminorities§! are §Runavailable§!\n"
@@ -1141,8 +1144,8 @@
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
  TUR_fatherly_figure:0 "Fatherly Figure"
- TUR_mehmed_Vi:0 "Sultan Mehmed VI"
- TUR_sultan_abdulmecid_ii:0 "Abdülmecid II"
+ TUR_mehmed_VI:0 "Sultan Mehmed VI"
+ TUR_abdulmecid_II:0 "Abdülmecid II"
  tur_placated_administration:0 "Placated Administration"
  loyal_vilayet:0 "Loyal Vilayet"
  autonomy_vilayet:0 "Autonomous Vilayet"
