--- a/localisation/russian/ww1_characters_l_russian.yml
+++ b/localisation/russian/ww1_characters_l_russian.yml
@@ -3649,11 +3649,11 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  TUR_mehmed_said:0 "Mehmed Said Paşa"
  TUR_salih_hulusi:0 "Salih Hulusi Paşa"
  TUR_mehmed_v:0 "Mehmed V"
- TUR_abdulhamid_ii:0 "Abdülhamid II"
+ TUR_abdulhamid_II:0 "Abdülhamid II"
  TUR_vahideddin_mehmed:0 "Şehzade Vahdettin"
- TUR_mehmed_vi:0 "Mehmed VI"
+ TUR_mehmed_VI:0 "Mehmed VI"
  TUR_abdulmecid_efendi:0 "Abdülmecid Efendi"
- TUR_abdulmecid_ii:0 "Abdülmecid II"
+ TUR_abdulmecid_II:0 "Abdülmecid II"
  TUR_osman_iv:0 "Osman IV"
  TUR_ahmed_nihad:0 "Ahmed Nihad"
  TUR_ahmed_iv:0 "Ahmed IV"
