--- a/localisation/russian/ww1_ideas_l_russian.yml
+++ b/localisation/russian/ww1_ideas_l_russian.yml
@@ -668,7 +668,7 @@
  TUR_senussi_order:0 "Орден Сенусси"
  TUR_islamist_revolt:0 "Исламское восстание"
  TUR_unity_of_the_islamic_world:0 "Единство исламского мира"
- TUR_sultan_abdulhamid_ii:0 "Абдулхамид II"
+ TUR_abdulhamid_II:0 "Абдулхамид II"
  TUR_constitutional_reform:0 "Конституционные реформы"
  TUR_diplomatic_isolation:0 "Дипломатическая изоляция"
  TUR_diplomatic_isolation_desc:0 "Как показали наши недавние войны, ни одна великая держава не желает заключать с нами союз. Как долго продлится эта изоляция, неизвестно, но тот факт, что мы должны найти союзников, если хотим выжить, неоспорим."
@@ -772,7 +772,7 @@
  TUR_british_ship_purchase:0 "Покупка британских кораблей"
  TUR_homeland_security:0 "Национальная безопасность"
  TUR_wavering_ottoman_influence:0 "Колеблющееся османское влияние"
- HJZ_hussein_bin_ali_caliph:0 "Хусейн ибн Али"
+ HJZ_hussein_bin_ali:0 "Хусейн ибн Али"
  TUR_army_segregation:0 "Сегрегация в армии"
  TUR_compulsory_education:0 "Обязательное образование"
  TUR_model_turkish_citizen:0 "Модель [TUR.GetAdjective]ого гражданина"
@@ -916,7 +916,7 @@
 
  TUR_sultan_mehmed_v:0 "Султан Мехмед V"
  TUR_sultan_mehmed_vi:0 "Султан Мехмед VI"
- TUR_sultan_abdulmecid_ii:0 "Абдул-Меджид II"
+ TUR_abdulmecid_II:0 "Абдул-Меджид II"
  tur_placated_administration:0 "Умиротворенная администрация"
  loyal_vilayet:0 "Лояльный вилайет"
  autonomy_vilayet:0 "Автономный вилайет"
