--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -6035,8 +6035,8 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_concentrate_forced_labor_on_military_industry_desc:0 "Our current policy on forced labor fails to focus on required areas. Instead of having a generalized plan, its more effective to concentrate our efforts on military industry."
  TRS_abolish_forced_labor:0 "Abolish Forced Labor"
  TRS_abolish_forced_labor_desc:0 "Though we've seen the benefits of force labor, we can't continue it indefinitely. Due to its high unpopularity, perhaps its time to abolish forced labor in the Ottoman provinces under our control."
- TRS_utilize_forced_labor_tt: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §R-20.00%§!\n£factory_output_texticon  Factory Output: §R-20.00%§!\n\n"
- TRS_utilize_forced_labor_tt2: "Modify §YCemâl's Syria§! by\n£construction_speed_texticon  Construction Speed: §G+20.00%§!\n£factory_output_texticon  Factory Output: §G+20.00%§!\n\n"
+ TRS_utilize_forced_labor_tt: "Modify §Y[TRS_cemals_syria]§! by\n£construction_speed_texticon  Construction Speed: §R-20.00%§!\n£factory_output_texticon  Factory Output: §R-20.00%§!\n\n"
+ TRS_utilize_forced_labor_tt2: "Modify §Y[TRS_cemals_syria]§! by\n£construction_speed_texticon  Construction Speed: §G+20.00%§!\n£factory_output_texticon  Factory Output: §G+20.00%§!\n\n"
  TRS_syrian_industrialization_initiative:0 "Syrian Industrial Initiative"
  TRS_syrian_industrialization_initiative_desc:0 "Syria lacks greatly in industry. Instead of relying on the central government, we must take matters into our own hands. Through hard work and enough time, we can start industrializing Syria."
  TRS_tooth_and_nail_effort:0 "Tooth and Nail Effort"
