--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -509,3 +509,6 @@
  judicial_reformer:0 "Judicial Reformer"
  TUR_uncrowned_king:0 "Uncrowned King"
  railway_engineer:0 "Railway Engineer"
+ TUR_sultan_of_egypt:0 "Sultan of Egypt"
+ TUR_first_president_of_the_nation:0 "First President of the Nation"
+ TUR_father_of_a_new_dynasty:0 "Father of a New Dynasty"
