icons shine fix + more reworking

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5764,7 +5764,7 @@ ROM_dismantle_transylvanian_councils:0 "Dismantle Transylvanian Councils"
 ROM_joint_land_reform_efforts:0 "Joint Land Reform Efforts"
 ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
 ROM_stimulate_the_economy:0 "Stimulate the Economy"
-
+ROM_improvements_on_fortifications:0 "Improvements to Fortifications"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorite"
@@ -5816,8 +5816,8 @@ ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Ma
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
 
 
-ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!\nStability: §G+5.00%§!"
-
+ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
+ROM_impfort.tt:0 "Modify §YRomanian Economy§! by\n£fort_texticon §YLand Fort§Y§W Speed: §G+50.00%§!"
 
 ROM_otb.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
