Revert "Feudal Tree Commit"

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1922,16 +1922,11 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  AST_angloification_1:0 "Angloification"
  AST_pensions_1:0 "Pensions"
  #Feudal
-FEU_backward_agriculture:0 "Backward Agriculture"
-FEU_backward_agriculture_1:0 "Backward Agriculture"
-FEU_backward_agriculture_2:0 "Backward Agriculture"
-
-FEU_noble_investments:0 "Taxed Wealth of the Nobility"
-FEU_exploit_national_resources_dynamic_modifier:0 "Exploit National Resources"
-
+FEU_unstable_agriculture:0 "Unstable Agriculture"
+FEU_unstable_agriculture_desc:0 "With an unmodernised agricultural system, we still rely heavily on what the seasons will bring and all it takes to cause a shortage of food is a drier season then usual."
 FEU_mass_illiteracy:0 "Mass Illiteracy"
-FEU_mass_illiteracy_lp:0 "Mass Illiteracy"
-FEU_mass_illiteracy_ge:0 "Mass Illiteracy"
+FEU_mass_illiteracy_desc:0 "In our nation, most of the population are illiterate and can't read. This poses a signifcant problem as most of our population is uneducated on many basic things and limits us in many ways."
+FEU_efficent_farming_techniques_idea:0 "Expanded Agriculture"
 
  #UK
  ENG_Staff:0 "English Staff"
