pretty big fix part I

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5404,6 +5404,7 @@ ROM_from_the_top_down_desc:0 "The peasant class will do best when the economy do
 ROM_land_reform_pass:0 "§YLand Reform Bill§! has §GPassed§!"
 ROM_land_reform_fail:0 "§YLand Reform Bill§! has §RFailed§!"
 land_reform_fail:0 "The land reform bill will §Rnot§! pass"
+ROM_HUN_war_1919:0 "Romanian-Hungarian War is ongoing"
 ROM_bratianu_resign:0 "Brătianu's Resignation"
 ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
 on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\nPolitical Power Gain: §G+0.10§!"
@@ -5765,8 +5766,19 @@ ROM_joint_land_reform_efforts:0 "Joint Land Reform Efforts"
 ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
 ROM_stimulate_the_economy:0 "Stimulate the Economy"
 ROM_improvements_on_fortifications:0 "Improvements to Fortifications"
-
+ROM_german_food_exports:0 "German Food Exports"
+ww1_romania.92.t:0 "A Question of Priorities"
+ww1_romania.92.d:0 "The time has come to choose what to internally focus on during the times of the Great War. We can either prioritize economic growth by war profiteering or industrializing even more, or we can improve the status of our army even more."
+ww1_romania.92.b:0 "Let's improve on our army"
+ww1_romania.92.a:0 "Capitalism sure sounds nice."
+ww1_romania.92.c:0 "We're still socialist, trust me!"
 #custom tooltips
+ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
+ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
+ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
+ROM_depends_on_event.tt:0 "§WThis focus will be §W§Gautocompleted§G§W with the options of the '§W§YA Question of Priorities§Y§W' event above.§W"
+ROM_commissioned_plane:0 "Has received plane commission"
+
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
 ROM_romanian_army_idea:0 "Romanian Army"
@@ -5783,7 +5795,7 @@ ww1_romania.69.d:0 "Riding a relative wave of stability and economic growth, Rom
 ww1_romania.69.a:0 "Great!"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_edit_div:0 "§GEnables§! §YEditing§! and §YCreation§! of §YDivision Templates§!"
-
+ROM_aurel_vlaicu_dies:0 "Aurel Vlaicu dies"
 
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
@@ -5804,9 +5816,6 @@ ww1_romania.42.d:0 "Germany has sent a message informing us that they will stop 
 ww1_romania.42.a:0 "Lets not anger them..."
 ww1_romania.42.b:0 "We will find markets elsewhere, then"
 ROM_ttyg:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+5.00%§!\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n\n"
-ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
-ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
-ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
 ROM_tsarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!"
 ROM_pwarmy:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n£organization_texticon Division Organization: §G+5.00%§!"
 ROM_reorg_army.tt:0 "Modify §YRomanian Army§! by\n£organization_texticon Division Organization: §G+10.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£defence_texticon Division Defense: §G+5.00%§!\n\n"
