pretty big fix part II but smaller

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -2763,7 +2763,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  ROM_dimitrie_sturdza:0 "Dimitrie Sturdza"
  ROM_nicolae_filipescu:0 "Nicolae Filipescu"
  ROM_nicolae_malaxa:0 "Nicolae Malaxa"
- ROM_aurel_vlaicu_air:0 "Aurel Vlaicu"
+ ROM_aurel_vlaicu_name:0 "Aurel Vlaicu"
  ROM_traian_vuia_air:0 "Traian Vuia"
  
  # RUSSIA
