implementation of aurel vlaicu's death

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5172,7 +5172,7 @@ ww1_romania.55.a:0 "This is an outrage! Condemn them"
 ww1_romania.55.b:0 "Lets act rationally here..."
 you_are_now_happy:0 "You are now §GHappy§!"
 ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
-ROM_advancements_in_plane_technology_desc:0 "The future of war lies in the sky, far from the artillery and rifles of the ground. It is our intention to join that future and begin the construction of a competent air force the likes of which rival any enemy."
+ROM_advancements_in_plane_technology_desc:0 "We need to adapt [ROM.GetName] to the future, including aircraft technology. There are a lot of [ROM.GetAdjective] inventors and aircraft designers ready to take the challenge. We will commission one of them to design for us a plane that can be used for military purposes, in major part to transmit messages across vast lands. The question is who do we ask?"
 ROM_domestic_air_manufactor:0 "Cerchez and Co"
 ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government buoys them we might just be able to build ourself an airforce all by our lonesome."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
@@ -5772,12 +5772,19 @@ ww1_romania.92.d:0 "The time has come to choose what to internally focus on duri
 ww1_romania.92.b:0 "Let's improve on our army"
 ww1_romania.92.a:0 "Capitalism sure sounds nice."
 ww1_romania.92.c:0 "We're still socialist, trust me!"
+ww1_romania.93.t:0 "The Death of Aurel Vlaicu"
+ww1_romania.93.d:0 "Aurel Vlaicu, a Romanian plane designer, has unfortunately passed away in the Carpathian Mountains as he attempted to be the first person to fly across them. Few attacked his friends, who were on the journey with him, following behind in a car, and accused them of sabotage. They of course deny this claim, and instead claim the motor was cut off in order to land, which made it difficult to steer the plane, which crashed."
+ww1_romania.93.a:0 "Rest in peace."
+
+
 #custom tooltips
 ROM_war_has_ended:0 "§WThis focus will be §W§Gautocompleted§G§W when the §W§YGreat War§Y§W ends"
 ROM_war_has_ended_lost:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Gvictorious§G§W in the §W§YGreat War§Y§W"
 ROM_war_has_ended_victory:0 "§WThis focus will be §W§Gautocompleted§G§W when [ROM.GetName] is §W§Rdefeated§R§W in the §W§YGreat War§Y§W"
 ROM_depends_on_event.tt:0 "§WThis focus will be §W§Gautocompleted§G§W with the options of the '§W§YA Question of Priorities§Y§W' event above.§W"
 ROM_commissioned_plane:0 "Has received plane commission"
+ROM_aurel_vlaicu.tt:0 "§WRetire §W§YAurel Vlaicu§Y§W from §W§YRomania§Y§W"
+ROM_aurel_vlaicu_death_disable.tt:0 "§WWe will now §W§Rnot§R§W be able to commission §W§YAurel Vlaicu§Y§W for the focus '§W§YCommission Military Aircraft§Y§W' anymore."
 
 ROM_the_kings_government:0 "The King's Favorite"
 ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL. Perhaps the rotation system may finally stop due to his displeasure with the next party exceeding his displeasure with the current one. Nevermind that, though. All that is known now is that a moderate government has been entrusted to the PCD. Negotiations have begun for a coalition encompassing the centrist delegates."
@@ -5796,7 +5803,8 @@ ww1_romania.69.a:0 "Great!"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
 ROM_edit_div:0 "§GEnables§! §YEditing§! and §YCreation§! of §YDivision Templates§!"
 ROM_aurel_vlaicu_dies:0 "Aurel Vlaicu dies"
-
+ROM_asked_aurel_vlaicu:0 "Asked Aurel Vlaicu"
+ROM_asked_traian_vuia:0 "Asked Traian Vuia"
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
@@ -5823,11 +5831,8 @@ ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max
 ROM_prah_f2.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+10.00%§!"
 ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+5.00%§!"
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
-
-
 ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!\n£stability_texticon Stability: §G+5.00%§!"
 ROM_impfort.tt:0 "Modify §YRomanian Economy§! by\n£fort_texticon §YLand Fort§Y§W Speed: §G+50.00%§!"
-
 ROM_otb.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
@@ -5835,10 +5840,7 @@ ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! cons
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
 ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
 ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
-
 ROM_ift2.tt:0 "Modify §YRomanian Economy§! by\nConstruction Speed: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.105§!"
-
-
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
@@ -5847,8 +5849,8 @@ ROM_agricultural_knowledge.tt:0 "Modify §YRomanian Economy§! by\n£political_p
 ROM_tdga:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_si.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.10§!\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
 ROM_gati:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
-ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
-ROM_balbudg.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor\: §Y-5.0%§!"
+ROM_cttd:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
+ROM_balbudg.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G+0.05§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
 ROM_reduce_reliance.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §G-0.10§!"
 ROM_fftf:0 "Modify §YRomanian Economy §Y§Wby:\n£factory_output_texticon Factory Output:§W§G +5.00%"
 ww1_romania.41.t:0 "Germany Demands Concessions For Continued Arms Exports"
