--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -478,3 +478,4 @@
  left_wing_publisher:0 "Left-Wing Journalist"
  modernizer:0 "Modernizer"
  industrialist:0 "Industrialist"
+ air_chief_glider_builder:0 "Glider Builder"
