--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8413,6 +8413,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  archduke_in_sarajevo:0 "Archduke in Sarajevo"
 
  # Feudal Decisions
+ FEU_purchase_foreign_arms_decisions:0 "Diplomatic Relations"
+ FEU_request_french_cannons:0 "Request French Cannons"
  FEU_purchase_french_arms:0 "Purchase [FRA.GetFlag] French Arms"
  FEU_purchase_british_arms:0 "Purchase [ENG.GetFlag] British Arms"
  FEU_purchase_german_arms:0 "Purchase [GER.GetFlag] German Arms"
@@ -8422,21 +8424,9 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FEU_purchase_french_artillery:0 "Purchase [FRA.GetFlag] French Artillery"
  FEU_purchase_british_artillery:0 "Purchase [ENG.GetFlag] British Artillery"
  FEU_purchase_german_artillery:0 "Purchase [GER.GetFlag] German Artillery"
+ FEU_end_illiteracy:0 "Fight Rampant Illiteracy"
+ FEU_smuggle_guns:0 "Smuggle Guns"
 
- FEU_diplomatic_effort:0 "Diplomatic Efforts"
- FEU_diplomatic_effort_to_france:0 "Diplomatic Effort to [FRA.GetFlag] [FRA.GetNameDef]"
- FEU_diplomatic_effort_to_britain:0 "Diplomatic Effort to [ENG.GetFlag] [ENG.GetNameDef]"
- FEU_diplomatic_effort_to_italy:0 "Diplomatic Effort to [ITA.GetFlag] [ITA.GetNameDef]"
- FEU_diplomatic_effort_to_russia:0 "Diplomatic Effort to [RUS.GetFlag] [RUS.GetNameDef]"
- FEU_diplomatic_effort_to_ussr:0 "Diplomatic Effort to [SOV.GetFlag] [SOV.GetNameDef]"
- FEU_diplomatic_effort_to_germany:0 "Diplomatic Effort to [GER.GetFlag] [GER.GetNameDef]"
- FEU_diplomatic_effort_to_austria_hungary:0 "Diplomatic Effort to [AUH.GetFlag] [AUH.GetNameDef]"
- FEU_diplomatic_effort_to_spain:0 "Diplomatic Effort to [SPR.GetFlag] [SPR.GetNameDef]"
-
-FEU_end_illiteracy:0 "Fight Rampant Illiteracy"
-
-FEU_smuggle_guns:0 "Smuggle Guns"
- 
 
  ENG_imperial_federation_coring:0 "Implementing the Imperial Federation"
  ENG_imperial_federation_coring_desc:0 "Following the formation of the Imperial Federation, we must reorganised and reactivate the old administrations to prevent any red tape and resistance."
