--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -447,28 +447,23 @@
  FEU_def_country_name:0 "[ROOT.GetNameDefCap]"
  FEU_secure_internal_politics:0 "Secure Internal Politics"
  FEU_strengthen_ruler_position:0 "Strengthen [ROOT.GetLeader]'s Position"
- FEU_enact_minor_reforms:0 "Enact Minor Reforms"
- FEU_the_status_of_the_minorities:0 "The Status of the Minorities"
- FEU_protect_the_rights_of_man:0 "Protect the Rights of Man"
- FEU_pursue_traditionalism:0 "Pursue Traditionalism"
- FEU_pursue_traditionalism_desc:0 "Reforms without the will of the people shall only bring us trouble and revolution, we know that the way forward for our nation is through the pursuit of traditionalism."
- FEU_militarism:0 "Militarism"
- FEU_westernisation:0 "Westernisation"
- FEU_westernisation_desc:0 "Although our people may not agree with our policies, we know that the way forward for our nation is through reforms and social progress."
- FEU_draft_a_constitution:0 "Draft a Constitution"
  FEU_our_place_in_the_world:0 "Our Place in the World"
  FEU_our_place_in_the_world_desc:0 "The [ROOT.GetAdjectiveCap] people have a complex history with deep-rooted traditions. It is imperative for a great nation like ours to assert its position in the world."
- FEU_secure_our_independence:0 "Secure our Independence"
- FEU_secure_our_independence_desc:0 "As a minor nation, our independence is often challenged by foreign powers for their own interests. Only through sustained diplomatic efforts will we be able to secure our nation's future."
+ FEU_maintain_neutrality:0 "Maintain Neutrality"
  FEU_secure_entente_support:0 "Secure Entente Support"
- FEU_british_delegation:0 "British Delegation"
- FEU_british_naval_teachings:0 "British Naval Teachings"
- FEU_french_delegation:0 "French Delegation"
- FEU_entente_advisors:0 "Entente Advisors"
+ FEU_entente_industrial_aid:0 "Entente Industrial Support"
+ FEU_request_entente_cannons:0 "Request Entente Cannons"
+ FEU_british_industrial_arms_support:0 "British Military Industry Support"
+ FEU_entente_advisors:0 "French Advisors"
+ FEU_join_entente:0 "Join the Entente"
+ FEU_italian_support:0 "Italian Support"
  FEU_secure_german_support:0 "Secure German Support"
- FEU_german_arms:0 "German Arms"
- FEU_german_delegation:0 "German Delegation"
+ FEU_german_industrial_aid:0 "German Industrial Support"
+ FEU_german_smallarms:0 "German Small Arms"
+ FEU_ottoman_military_aid:0 "Ottoman Military Aid"
  FEU_german_military_mission:0 "German Military Mission"
+ FEU_join_central_powers:0 "Join the Central Powers"
+ FEU_german_arms_support:0 "German War Industries"
  FEU_purchase_foreign_arms:0 "Purchase Foreign Arms"
  FEU_purchase_foreign_equipment:0 "Purchase Foreign Equipment"
  FEU_purchase_foreign_artillery:0 "Purchase Foreign Artillery"
