good idea in theory but better execution of it

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5765,7 +5765,7 @@ ROM_dismantle_transylvanian_councils:0 "Dismantle Transylvanian Councils"
 ROM_joint_land_reform_efforts:0 "Joint Land Reform Efforts"
 ROM_nationalize_resita_enterprise:0 "Nationalise the Resita Enterprise"
 ROM_stimulate_the_economy:0 "Stimulate the Economy"
-ROM_improvements_on_fortifications:0 "Improvements to Fortifications"
+ROM_improvements_on_fortifications:0 "Getting With the Times"
 ROM_german_food_exports:0 "German Food Exports"
 ww1_romania.92.t:0 "A Question of Priorities"
 ww1_romania.92.d:0 "The time has come to choose what to internally focus on during the times of the Great War. We can either prioritize economic growth by war profiteering or industrializing even more, or we can improve the status of our army even more."
