finish neutrality tree

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8415,6 +8415,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  # Feudal Decisions
  FEU_purchase_foreign_arms_decisions:0 "Diplomatic Relations"
  FEU_request_french_cannons:0 "Request French Cannons"
+ FEU_request_german_guns:0 "Request German Guns"
  FEU_purchase_french_arms:0 "Purchase [FRA.GetFlag] French Arms"
  FEU_purchase_british_arms:0 "Purchase [ENG.GetFlag] British Arms"
  FEU_purchase_german_arms:0 "Purchase [GER.GetFlag] German Arms"
